# othi-nlp-2501

./: pyproject.toml
analysis/otrec/: preprocess.py  pretrained_w2v_cluster.py  pretrained_xlsx_interface.py  w2v_cluster.py  w2v_learn.py
dwht/: base.py
dwht/carte/: load.py
dwht/nlp/: preprocess.py  w2v.py
